--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -11,6 +11,7 @@
   <!-- Favicons -->
   <link href="../img/favicon.png" rel="icon">
   <link href="../img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../css/forms.css" rel="stylesheet">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
@@ -122,8 +123,8 @@
               <a href="#contact">Contato</a>
             </li>
             <li>
-                <a href="../about/index.html">Sobre Nós</a>
-              </li>
+              <a href="../about/index.html">Sobre Nós</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -136,16 +137,16 @@
     ============================-->
   <section id="hero" style="background: url(../img/about-img3.jpg) top center fixed;">
     <div class="icons">
-        <a href="https://www.linkedin.com/company/enetec-consultoria/">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.facebook.com/enetec.consultoria/">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.instagram.com/enetec/">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </div>
+      <a href="https://www.linkedin.com/company/enetec-consultoria/">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/enetec.consultoria/">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/enetec/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="hero-container">
       <h1> Instalações Elétricas</h1>
       <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
@@ -168,10 +169,8 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" 
-                >Por que projetar as instalações de seu imóvel?</h2>
-              <p 
-                >
+              <h2 class="title">Por que projetar as instalações de seu imóvel?</h2>
+              <p>
                 Instalações mal-projetadas e/ou mal-cuidadas são causas de inúmeros problemas. Tais problemas incluem questôes materiais:
                 diminuição da vida útil dos eletrônicos, equipamentos queimados, ou até mesmo questões de segurança como
                 queimaduras e até mesmo a morte.
@@ -179,11 +178,9 @@
 
               <div class=" wow fadeInUp">
                 <h4 class="title">
-                  <a 
-                 href="">Como identificar os problemas?</a>
+                  <a href="">Como identificar os problemas?</a>
                 </h4>
-                <p 
-                 class="description">
+                <p class="description">
                   Fios desencapados, instalações sem manutenção adequada ( o ideal é de 5 em 5 anos), a energia cai frequentemente.
 
                 </p>
@@ -191,11 +188,9 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.2s">
                 <h4 class="title">
-                  <a 
-               href="">Segurança</a>
+                  <a href="">Segurança</a>
                 </h4>
-                <p 
-               class="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
+                <p class="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
                   residência. Os acidentes de origem elétrica aumentaram em todo o Brasil, segundo o anuário divulgado pela
                   Abracopel – Associação Brasileira de Conscientização para os Perigos da Eletricidade. Foram 1.387 ocorrências
                   registradas em 2017, sendo 702 fatais.
@@ -204,11 +199,9 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.4s">
                 <h4 class="title">
-                  <a 
-             href="">O que fazer?</a>
+                  <a href="">O que fazer?</a>
                 </h4>
-                <p 
-             class="description">
+                <p class="description">
                   Identificou algum problema?
                   <a href="#contact">
                     Fale conosco.
@@ -233,8 +226,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" >O que podemos fazer por você</h3>
-          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title">O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -313,7 +306,7 @@
               <div>
                 <i class="fa fa-map-marker"></i>
                 <p>
-                  <br> Brasília DF UnB SG-11 - AT 3/4
+                  Brasília DF UnB SG-11 - AT 3/4
                 </p>
               </div>
 
@@ -328,23 +321,11 @@
                   <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                   <br>
                 </p>
-                <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
               </div>
-            </div>
-
-            <div style="position: relative; left: 22.5%;" class="social-links">
-              <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
-                <i class="fa fa-facebook"></i>
-              </a>
-              <a href="https://www.instagram.com/enetec" class="instagram">
-                <i class="fa fa-instagram"></i>
-              </a>
-              <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
-                <i class="fa fa-linkedin"></i>
-              </a>
             </div>
 
           </div>
@@ -370,9 +351,12 @@
                     placeholder="Digite aqui sua mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center">
-                  <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
-                </div>
+                <center>
+                  <button class="contact2-form-btn" style="background: #2dc997;">
+                    <span> Enviar </span>
+                    <input type="submit" hidden />
+                  </button>
+                </center>
               </form>
             </div>
 
