--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -17,6 +17,7 @@
 
   <!-- Bootstrap CSS File -->
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/forms.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
   <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -122,8 +123,8 @@
               <a href="#contact">Contato</a>
             </li>
             <li>
-                <a href="../about/index.html">Sobre Nós</a>
-              </li>
+              <a href="../about/index.html">Sobre Nós</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -136,16 +137,16 @@
     ============================-->
   <section id="hero" style="background: url(../img/spda.jpg) top center fixed;">
     <div class="icons">
-        <a href="https://www.linkedin.com/company/enetec-consultoria/">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.facebook.com/enetec.consultoria/">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.instagram.com/enetec/">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </div>
+      <a href="https://www.linkedin.com/company/enetec-consultoria/">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/enetec.consultoria/">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/enetec/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="hero-container">
       <h1>Sistemas de Proteção </h1>
       <h1>a Descargas Atmosféricas</h1>
@@ -169,21 +170,17 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" 
-                >O que é?</h2>
-              <p 
-                >
+              <h2 class="title">O que é?</h2>
+              <p>
                 É um sistema que protege tanto os equipamentos quanto as pessoas de raios. São conhecidos comumente com o nome de para-raios.
 
               </p>
 
               <div class=" wow fadeInUp" data-wow-delay="0.4s">
                 <h4 class="title">
-                  <a 
-           href="">Por quê implementar?</a>
+                  <a href="">Por quê implementar?</a>
                 </h4>
-                <p 
-           class="description">
+                <p class="description">
                   De acordo com a norma, é obrigatório para prédios acima de 30 metros. Contudo, é essencial para qualquer edíficio/residência,
                   pois as consequências de descargas atmosféricas podem ser catastróficas: Segundo o G1, 116 pessoas morrem
                   de raios por ano no Brasil. Além disso, é muito comum equipamentos eletrônicos queimarem por isso.
@@ -193,11 +190,9 @@
 
                 <div class=" wow fadeInUp" data-wow-delay="0.4s">
                   <h4 class="title">
-                    <a 
-             href="">O que fazer?</a>
+                    <a href="">O que fazer?</a>
                   </h4>
-                  <p 
-             class="description">
+                  <p class="description">
                     A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários!
                     <a href="#contact">
                       Fale conosco.
@@ -222,8 +217,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" >O que podemos fazer por você</h3>
-          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title">O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -279,160 +274,151 @@
         </div>
     </section>
     <!-- #services -->
-  
-      <!--==========================
+
+    <!--==========================
       Contact Section
       ============================-->
-      <section id="contact">
-        <div class="container wow fadeInUp">
-          <div class="section-header">
-            <h3 class="section-title" style="color:black;">Contato</h3>
-            <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
-              em 24h no máximo</p>
-          </div>
+    <section id="contact">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h3 class="section-title" style="color:black;">Contato</h3>
+          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
+            em 24h no máximo</p>
         </div>
-  
-  
-        <div class="container wow fadeInUp">
-          <div class="row justify-content-center">
-  
-            <div class="col-lg-3 col-md-4">
-  
-              <div class="info">
-                <div>
-                  <i class="fa fa-map-marker"></i>
-                  <p>
-                    <br> Brasília DF UnB SG-11 - AT 3/4
-                  </p>
-                </div>
-  
-                <div>
-                  <i class="fa fa-envelope"></i>
-                  <p>contato@enetec.unb.br</p>
-                </div>
-  
-                <div>
-                  <i class="fa fa-phone"></i>
-                  <p>Telefone: (61) 3107-1036
-                    <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
-                    <br>
-                  </p>
-                  <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
-                    <br> clicando aqui
-                    <br>
-                  </a>
-                </div>
+      </div>
+
+
+      <div class="container wow fadeInUp">
+        <div class="row justify-content-center">
+
+          <div class="col-lg-3 col-md-4">
+
+            <div class="info">
+              <div>
+                <i class="fa fa-map-marker"></i>
+                <p>
+                  Brasília DF UnB SG-11 - AT 3/4
+                </p>
               </div>
-  
-              <div style="position: relative; left: 22.5%;" class="social-links">
-                <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
-                  <i class="fa fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/enetec" class="instagram">
-                  <i class="fa fa-instagram"></i>
-                </a>
-                <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
-                  <i class="fa fa-linkedin"></i>
+
+              <div>
+                <i class="fa fa-envelope"></i>
+                <p>contato@enetec.unb.br</p>
+              </div>
+
+              <div>
+                <i class="fa fa-phone"></i>
+                <p>Telefone: (61) 3107-1036
+                  <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
+                  <br>
+                </p>
+                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <br> clicando aqui
+                  <br>
                 </a>
               </div>
-  
             </div>
-  
-            <div class="col-lg-5 col-md-8">
-              <div class="form">
-                <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
-                    />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
-                      placeholder="Digite aqui sua mensagem"></textarea>
-                    <div class="validation"></div>
-                  </div>
-                  <div class="text-center">
-                    <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
-                  </div>
-                </form>
-              </div>
-  
-  
-            </div>
-  
+
           </div>
-      </section>
-      <!-- #contact -->
-  
-    </main>
-  
-  
-  
-    <!--==========================
+
+          <div class="col-lg-5 col-md-8">
+            <div class="form">
+              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
+                  />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
+                    placeholder="Digite aqui sua mensagem"></textarea>
+                  <div class="validation"></div>
+                </div>
+                <center>
+                  <button class="contact2-form-btn" style="background: #2dc997;">
+                    <span> Enviar </span>
+                    <input type="submit" hidden />
+                  </button>
+                </center>
+              </form>
+            </div>
+
+
+          </div>
+
+        </div>
+    </section>
+    <!-- #contact -->
+
+  </main>
+
+
+
+  <!--==========================
       Footer
       ============================-->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-  
-          <!--==========================
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+
+        <!--==========================
         Footer
         ============================-->
-          <footer id="footer">
-            <div class="footer-top">
-              <div class="container">
-  
-              </div>
-            </div>
-  
+        <footer id="footer">
+          <div class="footer-top">
             <div class="container">
-              <div class="copyright">
-                &copy; Copyright
-                <strong>inSite</strong>. All Rights Reserved
-              </div>
-              <div class="credits">
-                <!--
+
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="copyright">
+              &copy; Copyright
+              <strong>inSite</strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+              <!--
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
           -->
-                Boostrap & inSite made Tampate
-              </div>
+              Boostrap & inSite made Tampate
             </div>
-          </footer>
-          <!-- #footer -->
-  
-          <a href="#" class="back-to-top">
-            <i class="fa fa-chevron-up"></i>
-          </a>
-  
-          <!-- JavaScript Libraries -->
-          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
-          <script src="lib/jquery/jquery.min.js"></script>
-          <script src="lib/jquery/jquery-migrate.min.js"></script>
-          <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-          <script src="lib/easing/easing.min.js"></script>
-          <script async src="lib/wow/wow.min.js"></script>
-          <script async src="lib/waypoints/waypoints.min.js"></script>
-          <script async src="lib/counterup/counterup.min.js"></script>
-          <script async src="lib/superfish/hoverIntent.js"></script>
-          <script async src="lib/superfish/superfish.min.js"></script>
-  
-  
-          <!-- Template Main Javascript File -->
-          <script src="js/main.js"></script>
-          <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
-          </script>
-          <script async src="js/google_map.js"></script>
+          </div>
+        </footer>
+        <!-- #footer -->
+
+        <a href="#" class="back-to-top">
+          <i class="fa fa-chevron-up"></i>
+        </a>
+
+        <!-- JavaScript Libraries -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+        <script src="lib/jquery/jquery.min.js"></script>
+        <script src="lib/jquery/jquery-migrate.min.js"></script>
+        <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="lib/easing/easing.min.js"></script>
+        <script async src="lib/wow/wow.min.js"></script>
+        <script async src="lib/waypoints/waypoints.min.js"></script>
+        <script async src="lib/counterup/counterup.min.js"></script>
+        <script async src="lib/superfish/hoverIntent.js"></script>
+        <script async src="lib/superfish/superfish.min.js"></script>
+
+
+        <!-- Template Main Javascript File -->
+        <script src="js/main.js"></script>
+        <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+        </script>
+        <script async src="js/google_map.js"></script>
 </body>
 
 </html>
