--- a/eficiencia/analise.html
+++ b/eficiencia/analise.html
@@ -17,6 +17,8 @@
 
   <!-- Bootstrap CSS File -->
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+  <link href="../css/forms.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
   <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -123,8 +125,8 @@
               <a href="#contact">Contato</a>
             </li>
             <li>
-                <a href="../about/index.html">Sobre Nós</a>
-              </li>
+              <a href="../about/index.html">Sobre Nós</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -137,16 +139,16 @@
     ============================-->
   <section id="hero" style="background: url(../img/about-img3.jpg) top center fixed;">
     <div class="icons">
-        <a href="https://www.linkedin.com/company/enetec-consultoria/">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.facebook.com/enetec.consultoria/">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.instagram.com/enetec/">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </div>
+      <a href="https://www.linkedin.com/company/enetec-consultoria/">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/enetec.consultoria/">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/enetec/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="hero-container">
       <h1> Análise de Conta de Luz</h1>
       <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
@@ -169,10 +171,8 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" 
-                > Por quê minha conta de luz está alta?</h2>
-              <p 
-                >
+              <h2 class="title"> Por quê minha conta de luz está alta?</h2>
+              <p>
                 Vários fatores são comuns para o aumento da conta de luz:mau dimensionamento dos equipamentos (demanda), multas, maus hábitos
                 de consumo e equipamentos de alto consumo. Os dois primeiros ocorrem apenas em contas tipo A (geralmente
                 empresas).
@@ -181,24 +181,20 @@
                 Uma outra causa, mais difícil de identificar, são fugas de corrente: parte da energia não chega nos equipamentos porque se
                 dissipa no meio do caminho.
               </p>
-              <p 
->
+              <p>
                 Por meio de equipamento chamado de analisador de cargas, podemos identificar a qualidade da energia que chega ao imóvel.
                 Isso permite identificar onde e se há fugas de corrente.
               </p>
 
 
 
-              <h2 class="title" 
-         > O que eu posso fazer?</h2>
-              <p 
-         >
+              <h2 class="title"> O que eu posso fazer?</h2>
+              <p>
                 Um estudo detalhado é necessário para cada caso. Contudo, algumas medidas são muito comuns: trocar lâmpadas fluorescentes
                 por lâmpadas LED, desligar equipamentos quando não usados (mesmo em stand-by, eles ainda consomem energia).
               </p>
 
-              <p 
-             class="description">
+              <p class="description">
                 A ENETEC analisa a sua conta de luz e também a qualidade de energia. Não pague mais que o necessário!
                 <a href="#contact">
                   Fale conosco.
@@ -221,8 +217,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" >O que podemos fazer por você</h3>
-          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title">O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -278,7 +274,7 @@
         </div>
     </section>
     <!-- #services -->
- 
+
 
 
     <!--==========================
@@ -303,7 +299,7 @@
               <div>
                 <i class="fa fa-map-marker"></i>
                 <p>
-                  <br> Brasília DF UnB SG-11 - AT 3/4
+                  Brasília DF UnB SG-11 - AT 3/4
                 </p>
               </div>
 
@@ -318,25 +314,12 @@
                   <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                   <br>
                 </p>
-                <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
               </div>
             </div>
-
-            <div style="position: relative; left: 22.5%;" class="social-links">
-              <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
-                <i class="fa fa-facebook"></i>
-              </a>
-              <a href="https://www.instagram.com/enetec" class="instagram">
-                <i class="fa fa-instagram"></i>
-              </a>
-              <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </div>
-
           </div>
 
           <div class="col-lg-5 col-md-8">
@@ -360,9 +343,12 @@
                     placeholder="Digite aqui sua mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center">
-                  <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
-                </div>
+                <center>
+                  <button class="contact2-form-btn" style="background: #2dc997;">
+                    <span> Enviar </span>
+                    <input type="submit" hidden />
+                  </button>
+                </center>
               </form>
             </div>
 
@@ -427,7 +413,7 @@
         <script async src="lib/superfish/hoverIntent.js"></script>
         <script async src="lib/superfish/superfish.min.js"></script>
 
-      
+
 
         <!-- Template Main Javascript File -->
         <script src="js/main.js"></script>
