--- a/simulador/index.html
+++ b/simulador/index.html
@@ -432,7 +432,7 @@
             <div>
               <i class="fa fa-map-marker"></i>
               <p>
-                <br> Brasília DF UnB SG-11 - AT 3/4
+                Brasília DF UnB SG-11 - AT 3/4
               </p>
             </div>
 
@@ -447,24 +447,14 @@
                 <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                 <br>
               </p>
-              <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=556161991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+              <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=556161991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                 <br> clicando aqui
                 <br>
               </a>
             </div>
           </div>
 
-          <div style="position: relative; left: 22.5%;" class="social-links">
-            <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
-              <i class="fa fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/enetec" class="instagram">
-              <i class="fa fa-instagram"></i>
-            </a>
-            <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
-              <i class="fa fa-linkedin"></i>
-            </a>
-          </div>
+          
 
         </div>
 
@@ -489,9 +479,12 @@
                   placeholder="Digite aqui sua mensagem"></textarea>
                 <div class="validation"></div>
               </div>
-              <div class="text-center">
-                <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
-              </div>
+              <center>
+                <button class="contact2-form-btn" style="background: #2dc997;">
+                  <span> Enviar </span>
+                  <input type="submit" hidden />
+                </button>
+              </center>
             </form>
           </div>
 
