--- a/port.html
+++ b/port.html
@@ -107,7 +107,7 @@
                   <a href="landing2/index.html">Guia de iluminação</a>
                 </li>
                 <li>
-                  <a href="landing/index3.html">Como proteger suas intalações elétricas</a>
+                  <a href="landing/index3.html">Como proteger suas instalações elétricas</a>
                 </li>
               </ul>
             </li>
