--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <a href="landing2/index.html">Guia de iluminação</a>
                 </li>
                 <li>
-                  <a href="landing/index3.html">Como proteger suas intalações elétricas</a>
+                  <a href="landing/index3.html">Como proteger suas instalações elétricas</a>
                 </li>
               </ul>
             </li>
@@ -147,12 +147,14 @@
         <i class="fa fa-instagram" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="hero-container" style="text-align: left;">
-
-      <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC
-        <br> Consultoria Júnior</h1>
-      <h2 style="font-family: 'montserrat-medium', sans-serif; color: white;">Você precisa de economia de energia? </h2>
-
+    <div class="hero-container">
+    <div class="justify-content-center">
+      <img  style="position: relative;bottom:5em;" src="img/logo-bg.png" />
+    </div>
+    <div class=" wow fadeIn d-flex justify-content-center ">
+     <a style="background: #2dc997; color:white; border-color:#26aa80;position: relative;bottom:5em; " 
+     class="btn btn-primary">Peça seu diagnóstico gratuito</a>
+    </div>
 
   </section>
   </div>
@@ -260,7 +262,7 @@
         <a href=""></a>
         <div class="section-header">
           <h3 class="section-title" style="color:black;">Como funciona para economizar com placas solares?</h3>
-          <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
+          <p class="section-description">Em média, no Brasil, são consumidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
         </div>
         <div class="row counters">
 
@@ -281,7 +283,7 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">4</span>
-            <p>Anos de payback</p>
+            <p>Tempo de retorno do investimento</p>
           </div>
 
         </div>
@@ -394,7 +396,7 @@
                   <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                   <br>
                 </p>
-                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
@@ -489,7 +491,7 @@
         <script src="lib/jquery/jquery-migrate.min.js"></script>
         <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="lib/easing/easing.min.js"></script>
-        <script async src="lib/wow/wow.min.js"></script>
+        <script src="lib/wow/wow.min.js"></script>
         <script async src="lib/waypoints/waypoints.min.js"></script>
         <script async src="lib/counterup/counterup.min.js"></script>
         <script async src="lib/superfish/hoverIntent.js"></script>
