--- a/index.html
+++ b/index.html
@@ -148,13 +148,17 @@
       </a>
     </div>
     <div class="hero-container">
-    <div class="justify-content-center">
-      <img  style="position: relative;bottom:5em;" src="img/logo-bg.png" />
-    </div>
-    <div class=" wow fadeIn d-flex justify-content-center ">
-     <a style="background: #2dc997; color:white; border-color:#26aa80;position: relative;bottom:5em; " 
-     class="btn btn-primary">Peça seu diagnóstico gratuito</a>
-    </div>
+      <div class="justify-content-center">
+        <img style="position: relative;bottom:5em;" src="img/logo-bg.png" />
+      </div>
+      <div class=" wow fadeIn d-flex justify-content-center ">
+        <a style="background: #2dc997; color:white; 
+        border-color:#26aa80;position: relative;bottom:5em;
+        cursor: pointer" 
+        class="btn btn-primary"
+        href="#contact"
+        >Peça seu diagnóstico gratuito</a>
+      </div>
 
   </section>
   </div>
@@ -418,7 +422,7 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
+                  <input type="text" class="form-control" name="phone" id="subject" placeholder="Telefone ou Celular"/>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
