--- a/simulador/index.html
+++ b/simulador/index.html
@@ -245,61 +245,62 @@
                       </div>
                     </div>
                     <input type="text" name="_gotcha" style="display:none" />
-                    <input type="hidden" name="_next" value="#" />
+                    <input type="hidden" name="_next" value="#resultados" />
                     <input type="hidden" name="_language" value="pt_BR" />
                 </div>
                 </form>
+                <section id="resultados">
+                  <div style="display:none" id="div-simulador">
+                    <br>
+                    <h2 id="texto-nome"></h2>
+                    <br>
+                    <br>
+                    <div class="table100 ver6 m-b-110">
+                      <table data-vertable="ver6">
+                        <tbody>
+                          <tr class="row100">
+                            <td class="column100 column1" data-column="column1">Número de Placas Necessárias</td>
+                            <td class="column100 column2" data-column="column8" id="texto-placas"></td>
+                          </tr>
 
-                <div style="display:none" id="div-simulador">
-                  <br>
-                  <h2 id="texto-nome"></h2>
-                  <br>
-                  <br>
-                  <div class="table100 ver6 m-b-110">
-                    <table data-vertable="ver6">
-                      <tbody>
-                        <tr class="row100">
-                          <td class="column100 column1" data-column="column1">Número de Placas Necessárias</td>
-                          <td class="column100 column2" data-column="column8" id="texto-placas"></td>
-                        </tr>
+                          <tr class="row100">
+                            <td class="column100 column1" data-column="column1">A área necessária é de</td>
+                            <td class="column100 column8" data-column="column8" id="texto-area"></td>
+                          </tr>
 
-                        <tr class="row100">
-                          <td class="column100 column1" data-column="column1">A área necessária é de</td>
-                          <td class="column100 column8" data-column="column8" id="texto-area"></td>
-                        </tr>
+                          <tr class="row100">
+                            <td class="column100 column1" data-column="column1">O seu investimento terá retorno em</td>
+                            <td class="column100 column8" data-column="column8"> 4 a 6 anos.</td>
+                          </tr>
 
-                        <tr class="row100">
-                          <td class="column100 column1" data-column="column1">O seu investimento terá retorno em</td>
-                          <td class="column100 column8" data-column="column8"> 4 a 6 anos.</td>
-                        </tr>
+                          <tr class="row100">
+                            <td class="column100 column1" data-column="column1">Dinheiro recebido em 30 anos</td>
+                            <td class="column100 column8" data-column="column8" id="consumo-dinheiro"></td>
+                          </tr>
 
-                        <tr class="row100">
-                          <td class="column100 column1" data-column="column1">Dinheiro recebido em 30 anos</td>
-                          <td class="column100 column8" data-column="column8" id="consumo-dinheiro"></td>
-                        </tr>
+                          <tr class="row100">
+                            <td class="column100 column1" data-column="column1">Dinheiro recebido se aplicado o mesmo investimento na poupança</td>
+                            <td class="column100 column8" data-column="column8" id="poupanca"></td>
+                          </tr>
 
-                        <tr class="row100">
-                          <td class="column100 column1" data-column="column1">Dinheiro recebido se aplicado o mesmo investimento na poupança</td>
-                          <td class="column100 column8" data-column="column8" id="poupanca"></td>
-                        </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <h3>
+                      Gráfico de kWh gerados por mês
+                    </h3>
+                    <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
+                    </canvas>
+                    <p>
+                      Lembrando que essas medidas são uma estimativa
+                    </p>
+                    <a class="cta-btn" href="../contact/index.html">
+                      Para um projeto personalizado, fale conosco!
+                    </a>
 
-                      </tbody>
-                    </table>
+
                   </div>
-                  <h3>
-                    Gráfico de kWh gerados por mês
-                  </h3>
-                  <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
-                  </canvas>
-                  <p>
-                    Lembrando que essas medidas são uma estimativa
-                  </p>
-                  <a class="cta-btn" href="../contact/index.html">
-                    Para um projeto personalizado, fale conosco!
-                  </a>
-
-
-                </div>
+                </section>
               </div>
             </div>
 
@@ -447,14 +448,14 @@
                 <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                 <br>
               </p>
-              <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=556161991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+              <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=556161991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                 <br> clicando aqui
                 <br>
               </a>
             </div>
           </div>
 
-          
+
 
         </div>
 
