--- a/simulador/index.html
+++ b/simulador/index.html
@@ -370,7 +370,7 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">4</span>
-            <p>Anos de payback</p>
+            <p>Retorno do investimento</p>
           </div>
 
         </div>
@@ -399,7 +399,7 @@
             <p style="color:black; text-align: justify;">
               Para mais informações,
               <a href="../landing3/index.html">baixe nosso e-book gratuito </a> de Energia Solar Fotovoltaica. Aprenda sobre tipos de placas solares e tipos
-              de instalações que podem ser feitas, seus benefícios e o tempo de payback estimado.
+              de instalações que podem ser feitas, seus benefícios e o retorno do investimento estimado.
 
             </p>
 
