--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -234,19 +234,18 @@
           <div class="card icon-services">
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
             <div class="card-body">
-              <h5 class="card-title">Placas Solares</h5>
-              <p class="card-text">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sistema de energia solar
-                fotovoltaico eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua
-                própria energia.</p>
+              <h5 class="card-title">Energia Solar</h5>
+              <p class="card-text">Nosso paÌs tem um dos maiores potenciais de captaÁ„o solar do mundo. Com um projeto de fotovoltaica da ENETEC
+                vocÍ ser· capaz de gerar energia e reduzir o valor da sua conta.</p>
             </div>
           </div>
           <div class="card icon-services">
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
             <div class="card-body">
               <h5 class="card-title">Instalações Elétricas</h5>
-              <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
-                e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="#contact">Fale conosco</a>
+              <p class="card-text">Fazemos a parte elétrica do seu projeto e emitimos laudos técnicos, o que garante sua segurança e evita prejuízos
+                associados a instabilidade energética.
+                <a href="">Fale conosco</a>
               </p>
             </div>
           </div>
@@ -254,9 +253,8 @@
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
             <div class="card-body">
               <h5 class="card-title">Eficiência Energética</h5>
-              <p class="card-text">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
-                gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
-                utilizamos.
+              <p class="card-text">Desperdiçar energia é perder dinheiro e cerca de 10% da energia gerada no Brasil não é aproveitada. Na ENETEC
+                analisamos sua conta de luz e seu plano tarifário, reduzindo o valor da sua conta.
               </p>
             </div>
           </div>
@@ -264,8 +262,8 @@
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
             <div class="card-body">
               <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
-              <p class="card-text">A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários! Fale conosco.
-                Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
+              <p class="card-text">O Brasil registra uma média de 78 milhıes de raios por ano e muitas residências não estão seguras. Na ENETEC
+                projetamos sistemas de para-raios que garantem a segurança de você e sua família.
 
 
               </p>
@@ -275,14 +273,16 @@
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
             <div class="card-body">
               <h5 class="card-title">Termografia</h5>
-              <p class="card-text">Utilizamos uma câmera que mede temperatura para ver se há fuga de corrente ou sobrecaga em um cabo ou disjuntor,
-                para que façamos um lauro de instalações. Assim, evitaremos acidentes que podem ser perigosos.
+              <p class="card-text">90% dos incêndios residenciais são causados por problemas nas instalações elétricas e poderiam ser prevenidos
+                com um laudo termográfico. Utilizamos uma câmera que mede temperatura para identificar e analisar sobreaquecimento
+                na estrutura do seu imóvel, evitando acidentes e garantindo a sua segurança.
               </p>
             </div>
           </div>
         </div>
     </section>
     <!-- #services -->
+
 
     <!--==========================
       Contact Section
@@ -321,7 +321,7 @@
                   <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                   <br>
                 </p>
-                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
