--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -235,8 +235,8 @@
             <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
             <div class="card-body">
               <h5 class="card-title">Energia Solar</h5>
-              <p class="card-text">Nosso paÌs tem um dos maiores potenciais de captaÁ„o solar do mundo. Com um projeto de fotovoltaica da ENETEC
-                vocÍ ser· capaz de gerar energia e reduzir o valor da sua conta.</p>
+              <p class="card-text">Nosso país tem um dos maiores potenciais de captação solar do mundo. Com um projeto de fotovoltaica da ENETEC
+                você será capaz de gerar energia e reduzir o valor da sua conta.</p>
             </div>
           </div>
           <div class="card icon-services">
