--- a/index.html
+++ b/index.html
@@ -194,66 +194,66 @@
     <!--==========================
       Services Section
       ============================-->
-      <section id="services" style="background: rgb(31,141,211)">
-        <div class="container wow fadeIn">
-          <div class="section-header">
-            <h3 class="section-title">O que podemos fazer por você</h3>
-            <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
-          </div>
-  
-          <div class="card-group">
-            <div class="card icon-services">
-              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
-              <div class="card-body">
-                <h5 class="card-title">Energia Solar</h5>
-                <p class="card-text">Nosso paÌs tem um dos maiores potenciais de captaÁ„o solar do mundo. Com um projeto de fotovoltaica da ENETEC
-                  vocÍ ser· capaz de gerar energia e reduzir o valor da sua conta.</p>
-              </div>
-            </div>
-            <div class="card icon-services">
-              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
-              <div class="card-body">
-                <h5 class="card-title">Instalações Elétricas</h5>
-                <p class="card-text">Fazemos a parte elétrica do seu projeto e emitimos laudos técnicos, o que garante sua segurança e evita prejuízos
-                  associados a instabilidade energética.
-                  <a href="">Fale conosco</a>
-                </p>
-              </div>
-            </div>
-            <div class="card icon-services">
-              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
-              <div class="card-body">
-                <h5 class="card-title">Eficiência Energética</h5>
-                <p class="card-text">Desperdiçar energia é perder dinheiro e cerca de 10% da energia gerada no Brasil não é aproveitada. Na ENETEC
-                  analisamos sua conta de luz e seu plano tarifário, reduzindo o valor da sua conta.
-                </p>
-              </div>
-            </div>
-            <div class="card icon-services">
-              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
-              <div class="card-body">
-                <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
-                <p class="card-text">O Brasil registra uma média de 78 milhıes de raios por ano e muitas residências não estão seguras. Na ENETEC
-                  projetamos sistemas de para-raios que garantem a segurança de você e sua família.
-  
-  
-                </p>
-              </div>
-            </div>
-            <div class="card icon-services">
-              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
-              <div class="card-body">
-                <h5 class="card-title">Termografia</h5>
-                <p class="card-text">90% dos incêndios residenciais são causados por problemas nas instalações elétricas e poderiam ser prevenidos
-                  com um laudo termográfico. Utilizamos uma câmera que mede temperatura para identificar e analisar sobreaquecimento
-                  na estrutura do seu imóvel, evitando acidentes e garantindo a sua segurança.
-                </p>
-              </div>
+    <section id="services" style="background: rgb(31,141,211)">
+      <div class="container wow fadeIn">
+        <div class="section-header">
+          <h3 class="section-title">O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+        </div>
+
+        <div class="card-group">
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
+            <div class="card-body">
+              <h5 class="card-title">Energia Solar</h5>
+              <p class="card-text">Nosso país tem um dos maiores potenciais de captação solar do mundo. Com um projeto de fotovoltaica da ENETEC
+                você será capaz de gerar energia e reduzir o valor da sua conta.</p>
             </div>
           </div>
-      </section>
-      <!-- #services -->
-  
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Instalações Elétricas</h5>
+              <p class="card-text">Fazemos a parte elétrica do seu projeto e emitimos laudos técnicos, o que garante sua segurança e evita prejuízos
+                associados a instabilidade energética.
+                <a href="">Fale conosco</a>
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Eficiência Energética</h5>
+              <p class="card-text">Desperdiçar energia é perder dinheiro e cerca de 10% da energia gerada no Brasil não é aproveitada. Na ENETEC
+                analisamos sua conta de luz e seu plano tarifário, reduzindo o valor da sua conta.
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
+              <p class="card-text">O Brasil registra uma média de 78 milhıes de raios por ano e muitas residências não estão seguras. Na ENETEC
+                projetamos sistemas de para-raios que garantem a segurança de você e sua família.
+
+
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Termografia</h5>
+              <p class="card-text">90% dos incêndios residenciais são causados por problemas nas instalações elétricas e poderiam ser prevenidos
+                com um laudo termográfico. Utilizamos uma câmera que mede temperatura para identificar e analisar sobreaquecimento
+                na estrutura do seu imóvel, evitando acidentes e garantindo a sua segurança.
+              </p>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!-- #services -->
+
 
     <!--==========================
       Facts Section
@@ -314,44 +314,38 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title">Por que evoluir com um projeto de consultoria elétrica?</h2>
+              <h2 class="title">Por que realizar uma consultoria elétrica?</h2>
+              <h4 class="title">
+                <a href="">Segurança em instalações elétricas</a>
+              </h4>
               <p>
-                Hoje em dia as formas de energia sustentáveis são tendência para o futuro. Quando você procura esses tipos de energia, não
-                está gastando sequer um centavo, sim investindo no seu futuro.
+                Segundo anuário divulgado pela Abracopel – Associação Brasileira de Conscientização para os Perigos da Eletricidade, houve
+                1.387 acidentes apenas em 2017, sendo 702 fatais. Com um projeto elétrico bem executado, você e sua família
+                estarão seguros.
               </p>
 
               <div class=" wow fadeInUp">
                 <h4 class="title">
-                  <a href="">Valorização do seu imóvel</a>
+                  <a href="">Valorização do seu imóvel com fotovoltaica</a>
                 </h4>
-                <p class="description">Uma pesquisa criada pelo Lawrence Berkeley Lab, divulgada no jornal New York Times, pesquisou 23 mil imóveis
-                  em 8 estados americanos, e demonstrou que todos os clientes que adquiriram um sistema solar fotovoltaico
-                  de 3,6 kWp viram seus imóveis sofrerem uma valorização de pelo menos US$ 15 mil em seu valor de mercado,
-                  perante imóveis similares que não possuíam energia solar.
-
+                <p class="description">Uma pesquisa divulgada no jornal New York Times analisou 23 mil imóveis em 8 estados americanos e demonstrou
+                  que todos os clientes que adquiriram um sistema solar fotovoltaico viram seus imóveis sofrerem uma valorização
+                  de pelo menos US$ 15 mil em seu valor de mercado em comparação com imóveis similares que não possuíam energia
+                  solar.
                 </p>
               </div>
 
               <div class=" wow fadeInUp" data-wow-delay="0.2s">
                 <h4 class="title">
-                  <a href="">Segurança</a>
+                  <a href="">Economizar na sua conta é investir no seu futuro</a>
                 </h4>
-                <p sclass="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
-                  residência. Os acidentes de origem elétrica aumentaram em todo o Brasil, segundo o anuário divulgado pela
-                  Abracopel – Associação Brasileira de Conscientização para os Perigos da Eletricidade. Foram 1.387 ocorrências
-                  registradas em 2017, sendo 702 fatais.
+                <p sclass="description">Além de promover sua segurança, uma consultoria pode identificar pontos de desperdício de energia em seu
+                  imóvel. Pense na redução da sua conta como um ótimo investimento: uma economia de R$ 85 ao mês, por exemplo,
+                  gera um retorno de mais de R$ 1000 em um ano.
                 </p>
               </div>
 
-              <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                <h4 class="title">
-                  <a href="">Economia no seu bolso</a>
-                </h4>
-                <p class="description">Com os diversos problemas de projeto e execução que se encontram em construções, o dono sempre está perdendo
-                  energia por falta de um bom planejamento de Eficiência Energética.</p>
-                <br>
-                <br>
-              </div>
+
 
             </div>
           </center>
