--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                     <li>
                       <a href="instalacoes/normas.html">Adequação às normas</a>
                     </li>
+                    <li>
+                      <a href="instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
+                    </li>
                   </ul>
 
                   <li class="menu-has-children">
